[gd_scene load_steps=3 format=3 uid="uid://blpyi1fsj88sf"]

[ext_resource type="Script" path="res://base/base_menu.gd" id="1_btual"]
[ext_resource type="FontFile" uid="uid://cu1gycbn7rgh1" path="res://fonts/ka1.ttf" id="1_whntg"]

[node name="BaseMenu" type="Node2D"]
script = ExtResource("1_btual")

[node name="RootMenu" type="Node2D" parent="."]

[node name="Construction" type="Button" parent="RootMenu"]
offset_right = 168.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("1_whntg")
text = "Construction"

[node name="ConstructionMenu" type="Node2D" parent="."]

[node name="ResearchFacility" type="Button" parent="ConstructionMenu"]
offset_right = 168.0
offset_bottom = 27.0
focus_neighbor_bottom = NodePath("../Hospital")
theme_override_fonts/font = ExtResource("1_whntg")
text = "Research"

[node name="Hospital" type="Button" parent="ConstructionMenu"]
offset_top = 28.0
offset_right = 168.0
offset_bottom = 55.0
focus_neighbor_top = NodePath("../ResearchFacility")
focus_neighbor_bottom = NodePath("../Back")
theme_override_fonts/font = ExtResource("1_whntg")
text = "Hospital"

[node name="Back" type="Button" parent="ConstructionMenu"]
offset_top = 56.0
offset_right = 168.0
offset_bottom = 83.0
focus_neighbor_top = NodePath("../Hospital")
theme_override_fonts/font = ExtResource("1_whntg")
text = "Back"

[connection signal="pressed" from="RootMenu/Construction" to="." method="_on_construction_pressed"]
[connection signal="pressed" from="ConstructionMenu/ResearchFacility" to="." method="_on_research_facility_pressed"]
[connection signal="pressed" from="ConstructionMenu/Hospital" to="." method="_on_hospital_pressed"]
[connection signal="pressed" from="ConstructionMenu/Back" to="." method="_on_construction_back_pressed"]
